Prefer single build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,22 +11,22 @@ source:
 
 build:
   number: 0
-  skip: True  # [py27]
   entry_points:
     - optuna = optuna.cli:main
+  noarch: python
   script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
   host:
     - pip
-    - python
+    - python >=3.5
   run:
     - alembic
     - cliff
     - colorlog
     - joblib
     - numpy
-    - python
+    - python >=3.5
     - scipy
     - six
     - sqlalchemy >=1.1.0
