Add HideakiImamura and ytsmiling.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -65,8 +65,10 @@ about:
 extra:
   recipe-maintainers:
     - g-votte
+    - HideakiImamura
     - hvy
     - iwiwi
     - sile
     - smly
     - toshihikoyanase
+    - ytsmiling
