--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - colorlog
     - joblib
     - numpy
-    - packaging
+    - packaging >=20.0
     - python >=3.5
     - scipy !=1.4.0
     - sqlalchemy >=1.1.0
