--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,10 +23,9 @@ requirements:
   run:
     - alembic
     - cliff
-    - cmaes >=0.6.0
+    - cmaes >=0.8.2
     - colorlog
-    - joblib
-    - numpy
+    - numpy <1.20.0
     - packaging >=20.0
     - python >=3.6
     - scipy !=1.4.0
