--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,13 +13,12 @@ build:
   number: 1
   entry_points:
     - optuna = optuna.cli:main
-  noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
     - pip
-    - python >=3.6
+    - python
   run:
     - alembic
     - cliff
@@ -27,7 +26,7 @@ requirements:
     - colorlog
     - numpy <1.20.0
     - packaging >=20.0
-    - python >=3.6
+    - python
     - scipy !=1.4.0
     - sqlalchemy >=1.1.0
     - tqdm
