--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,12 +50,13 @@ about:
 
 extra:
   recipe-maintainers:
+    - c-bata
+    - contramundum53
     - g-votte
     - HideakiImamura
+    - himkt
     - hvy
     - iwiwi
+    - knshnb
     - not522
-    - sile
-    - smly
     - toshihikoyanase
-    - ytsmiling
