[ci skip] added user himkt

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @HideakiImamura @g-votte @hvy @iwiwi @not522 @sile @smly @toshihikoyanase @ytsmiling
+* @himkt @HideakiImamura @g-votte @hvy @iwiwi @not522 @sile @smly @toshihikoyanase @ytsmiling
