--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,15 +21,16 @@ requirements:
     - pip
     - python >=3.6
   run:
-    - alembic
+    - alembic >=1.5.0
     - cliff
     - cmaes >=0.8.2
     - colorlog
+    - importlib-metadata <5.0.0
     - numpy
     - packaging >=20.0
     - python >=3.6
     - scipy >=1.7.0,<1.9.0
-    - sqlalchemy >=1.1.0
+    - sqlalchemy >=1.3.0
     - tqdm
     - PyYAML
 
