--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,2 @@
-* @y0z @eukaryo @HideakiImamura @c-bata @contramundum53 @g-votte @himkt @hvy @iwiwi @knshnb @nabenabe0928 @not522 @sile @smly @toshihikoyanase @ytsmiling
+* @eukaryo @y0z @HideakiImamura @c-bata @contramundum53 @g-votte @himkt @hvy @iwiwi @knshnb @nabenabe0928 @not522 @sile @smly @toshihikoyanase @ytsmiling
+
