--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,13 @@
 {% set name = "optuna" %}
 {% set version = "4.1.0" %}
+{% set python_min = "3.8" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: b364e87a2038f9946c5e2770c130597538aac528b4a82c1cab5267f337ea7679
 
 build:
@@ -19,13 +20,13 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.7
+    - python {{ python_min }}
   run:
     - alembic >=1.5.0
     - colorlog
     - numpy
     - packaging >=20.0
-    - python >=3.7
+    - python >={{ python_min }}
     - sqlalchemy >=1.3.0
     - tqdm
     - PyYAML
